mise à jour du la structure

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-# NextAuth Configuration
-AUTH_SECRET=""
-NEXTAUTH_URL=""
-AUTH_TRUST_HOST=true
+NODE_ENV="development"
 
-# API Configuration
-NEXT_PUBLIC_BASE_URL=""
 
- 
+#Authentification
+AUTH_SECRET="0123456789"
+
+#Link
+NEXT_PUBLIC_URL="http://localhost:3000"
+NEXT_PUBLIC_API_BACKEND_URL="http://localhost:8081/api/v1"
+NEXT_PUBLIC_API_FILE_URL="http://localhost:8081"
